--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.servlet.context-path=/PrisonSchool
 logging.level.web = DEBUG
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/prisonschool
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
